--- a/webapp/view/Create.view.xml
+++ b/webapp/view/Create.view.xml
@@ -1,6 +1,6 @@
 <mvc:View controllerName="sio.hcm.mandate.controller.Create" xmlns="sap.m" xmlns:mvc="sap.ui.core.mvc" xmlns:core="sap.ui.core">
 	
-	<Page showNavButton="true" navButtonPress="onNavBack">
+	<Page showNavButton="true" navButtonPress="onNavBack" title="{i18n>CreateMandateRequest}">
 		<core:Fragment fragmentName="sio.hcm.mandate.view.DisplayEdit" type="XML"/>
 	</Page>
 </mvc:View>
